[package]
name = "nebula-mdx-derive-internal"
version = "0.1.0"
authors = ["Nebula Venus <6595784+Nebulavenus@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
scroll = "0.10.1"
